# ftgl-gl3

./: .gitignore  Android.mk  CMakeLists.txt  README
msvc/vc10/: .gitignore  ftgl.sln  ftgl_dll.vcxproj  ftgl_dll.vcxproj.filters  ftgl_static.vcxproj  ftgl_static.vcxproj.filters
src/: CMakeLists.txt  FTCharmap.h  FTContour.cpp  FTFace.h  FTGlyphContainer.h  FTInternals.h  FTLibrary.h  FTSize.h  Makefile
src/FTFont/: FTBitmapFont.cpp  FTBufferFont.cpp  FTFont.cpp  FTFontGlue.cpp  FTOutlineFont.cpp  FTTextureFont.cpp
src/FTGL/: ftgl.h  ftglesGlue.h  gl3Glue.cpp  gl3Glue.h
src/FTGlyph/: FTBitmapGlyph.cpp  FTGlyphGlue.cpp  FTOutlineGlyph.cpp  FTTextureGlyph.cpp
